# StorytellingReferenceBank

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  INDEX.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
audiobook-specs/: acx-requirements.md  sound-design-spec.md
docs/: GETTING-STARTED.md  PRODUCTION-SETUP.md  bespoke-personalities-product.md  commercial-production-checklist.md  sound-design-architecture.md  sound-design-research.md  voice-cloning-workflow.md
game/: .gitattributes  .gitignore  package.json
muse-weave/: .gitignore  CLAUDE.md  pnpm-lock.yaml
personas/: library-status.md  schema.json  taxonomy.md
projects/: README.md
references/: common-pitfalls.md  cross-curricular-story-matrix.md  master-techniques.md  mls-arts-health-languages-5-12.md  mls-ela-5-12.md  mls-math-5-12.md  mls-social-studies-5-12.md  ngss-scientist-story-guide.md  ngss-standards-5-12.md  the-craft-of-lasting-work.md  voice-direction-vocabulary.md
scripts/: README.md  acx_validator.py  audio_postprocess.py  batch_produce.py  check_contrast.py  dialogue_parser.py  inspect_manuscript.py  manage_student_codes.py  manuscript_to_chapters.py  multispeaker_tts.py  persona_compatibility.py  persona_regression.py  preflight_check.py  tts_generator.py  validate_personas.py  web_studio.py
storefront/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
student-portal/: DEPLOY.md  codes.json  index.html  library.json
style-guides/: childrens-picture-book.md  (+1 more)
(+288 files in other folders)
